<resources>
    <string name="app_name">Order Restaurant</string>
    <string name="app_version">Version 1.3.8</string>
    <string name="copyright">\u00A9 2020 Spiking Acacia</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="forgotyourpassword">Forgot your password?</string>
    <string name="title_activity_settings">Settings</string>
    <string name="content_description_app_loading_image">App loading image</string>
    <string name="button_purchase">Purchase</string>
    <string name="error_no_skus">We didn\'t find any products to display&#8230; Check your internet
        connection.</string>
    <string name="error_billing_unavailable">Billing unavailable. Make sure your Google Play app
        is setup correctly</string>
    <string name="error_billing_default">Billing unavailable. Please check your device.</string>
    <string name="header_inapp">One-time deals</string>
    <string name="header_subscriptions">Subscriptions</string>
    <string name="button_buy">Buy</string>
    <string name="button_own">Own</string>
    <string name="button_change">Change</string>
    <string name="alert_already_purchased">Item is already purchased</string>
    <string name="login_welcome_seller">Is the customer \n Always right?</string>
    <string name="register">Register</string>
    <string name="about">About</string>
    <string name="action_logout">Logout</string>
    <string name="pref_header_general">General</string>
    <string name="pref_header_location">Location</string>
    <string name="pref_header_feedback">Feedback</string>
    <string name="pref_header_help">Help</string>
    <string name="pref_header_account">Account</string>
    <string name="title_activity_maps">Map</string>
    <string name="location_permission_denied">This app requires location permission. Please try again and grant access to use the location.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="pref_order_range">Only customers within with radius (set in meters) are able to order locally.</string>
    <string name="title_activity_srreports">Reports</string>
    <string name="h_1">Profile</string>
    <string name="h_1_a"> \u2460 Define the restaurant\'s names.</string>
    <string name="h_1_b">\u279e Settings \u279e General \u279e Restaurant Names</string>
    <string name="h_2_a">\u2461 Upload the restaurant\'s profile picture</string>
    <string name="h_2_b">\u279e Settings \u279e General \u279e</string>
    <string name="h_3_a">\u2462 Set the order radius</string>
    <string name="h_3_b">\u279e Settings \u279e General \u279e Order Radius</string>
    <string name="h_4_a">\u2463 Set the number of tables in the restaurant</string>
    <string name="h_4_b">\u279e Settings \u279e General \u279e Number of tables</string>
    <string name="h_2">Location</string>
    <string name="h_5_a">\u2460 Set the restaurant\'s location</string>
    <string name="h_5_b">\u279e Settings \u279e Location \u279e Country</string>
    <string name="h_5_c">\u279e Settings \u279e Location \u279e Change Location</string>
    <string name="h_3">Menu</string>
    <string name="h_6_a">\u2460 Create the major categories eg food, drinks etc.</string>
    <string name="h_6_b"> \u279e Inventory  \u279e Options(upper right corner) \u279e add</string>
    <string name="h_6_c"> \u279e Inventory  \u279e long press the category \u279e  edit</string>
    <string name="h_6_d"> \u279e Inventory  \u279e long press the category \u279e  image</string>
    <string name="h_7_a">\u2461 Create the groups eg pizza, burgers etc.</string>
    <string name="h_7_b"> \u279e Inventory  \u279e  category \u279e Options(upper right corner) \u279e add</string>
    <string name="h_7_c"> \u279e Inventory  \u279e  category \u279e long press the group \u279e  edit</string>
    <string name="h_7_d"> \u279e Inventory  \u279e  category \u279e long press the group \u279e  image</string>
    <string name="h_8_a">\u2462 Create the items eg pepperoni, cheese burger etc.</string>
    <string name="h_8_b"> \u279e Inventory  \u279e  category \u279e  group \u279e Options(upper right corner) \u279e add</string>
    <string name="h_8_c"> \u279e Inventory  \u279e  category \u279e  group \u279e long press the item \u279e  edit</string>
    <string name="h_8_d"> \u279e Inventory  \u279e  category \u279e  group \u279e long press the item \u279e  image</string>
    <string name="h_end">\u20de That\'s it, you now set, customers can now begin to order using the Spiky Leta Customer app</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>